--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,8 +11,9 @@ cmds = ["npm ci"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm run preview"
+cmd = "npm run preview -- --host 0.0.0.0 --port $PORT"
 
 [variables]
 NODE_ENV = "production"
 PORT = "3000"
+HOST = "0.0.0.0"
