--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = [
 ]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["npm ci --production=false"]
 
 [phases.build]
 cmds = ["npm run build"]
@@ -17,3 +17,5 @@ cmd = "npm run preview -- --host 0.0.0.0 --port $PORT"
 NODE_ENV = "production"
 PORT = "3000"
 HOST = "0.0.0.0"
+VITE_FBRTDBAPI = "${VITE_FBRTDBAPI}"
+VITE_FBRTDBURL = "${VITE_FBRTDBURL}"
