--- a/web/Client/package.json
+++ b/web/Client/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port $PORT --host"
+    "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "firebase": "^11.2.0",
