--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,7 +11,9 @@ cmds = ["npm ci --production=false"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm run preview -- --host 0.0.0.0 --port $PORT"
+# Using a static file server instead of Vite preview
+nixPkgs = ["nodejs_18"]
+cmd = "npx serve -s dist -l $PORT"
 
 [variables]
 NODE_ENV = "production"
