--- a/web/Client/package.json
+++ b/web/Client/package.json
@@ -13,6 +13,8 @@
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
